--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -10061,7 +10061,7 @@ video {
 }
 
 .font-header {
-  font-family: Roboto;
+  font-family: Pacifico;
 }
 
 .font-body {
@@ -10069,7 +10069,7 @@ video {
 }
 
 .font-cursive {
-  font-family: Dancing Script;
+  font-family: Pacifico;
 }
 
 .font-hairline {
@@ -27903,7 +27903,7 @@ video {
   }
 
   .sm\:font-header {
-    font-family: Roboto;
+    font-family: Pacifico;
   }
 
   .sm\:font-body {
@@ -27911,7 +27911,7 @@ video {
   }
 
   .sm\:font-cursive {
-    font-family: Dancing Script;
+    font-family: Pacifico;
   }
 
   .sm\:font-hairline {
@@ -45715,7 +45715,7 @@ video {
   }
 
   .md\:font-header {
-    font-family: Roboto;
+    font-family: Pacifico;
   }
 
   .md\:font-body {
@@ -45723,7 +45723,7 @@ video {
   }
 
   .md\:font-cursive {
-    font-family: Dancing Script;
+    font-family: Pacifico;
   }
 
   .md\:font-hairline {
@@ -63527,7 +63527,7 @@ video {
   }
 
   .lg\:font-header {
-    font-family: Roboto;
+    font-family: Pacifico;
   }
 
   .lg\:font-body {
@@ -63535,7 +63535,7 @@ video {
   }
 
   .lg\:font-cursive {
-    font-family: Dancing Script;
+    font-family: Pacifico;
   }
 
   .lg\:font-hairline {
@@ -81339,7 +81339,7 @@ video {
   }
 
   .xl\:font-header {
-    font-family: Roboto;
+    font-family: Pacifico;
   }
 
   .xl\:font-body {
@@ -81347,7 +81347,7 @@ video {
   }
 
   .xl\:font-cursive {
-    font-family: Dancing Script;
+    font-family: Pacifico;
   }
 
   .xl\:font-hairline {
