--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -541,7 +541,7 @@ pre,
 code,
 kbd,
 samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 /**
@@ -10060,6 +10060,18 @@ video {
   clear: none;
 }
 
+.font-sans {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.font-serif {
+  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+}
+
+.font-mono {
+  font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
 .font-header {
   font-family: Pacifico;
 }
@@ -10180,6 +10192,46 @@ video {
   font-weight: 900;
 }
 
+.h-0 {
+  height: 0;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
 .h-16 {
   height: 4rem;
 }
@@ -10212,10 +10264,6 @@ video {
   height: 16rem;
 }
 
-.h-card {
-  height: 40vh;
-}
-
 .h-auto {
   height: auto;
 }
@@ -10230,6 +10278,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-card {
+  height: 40vh;
 }
 
 .text-xs {
@@ -11564,24 +11616,16 @@ video {
   min-height: 0;
 }
 
-.min-h-card {
-  min-height: 40vh;
-}
-
-.min-h-1\/4 {
-  min-height: 25%;
-}
-
-.min-h-1\/2 {
-  min-height: 50%;
-}
-
-.min-h-3\/4 {
-  min-height: 75%;
-}
-
 .min-h-full {
   min-height: 100%;
+}
+
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.min-h-card {
+  min-height: 40vh;
 }
 
 .min-w-0 {
@@ -18428,6 +18472,10 @@ video {
 
 .animate-bounce {
   animation: bounce 1s infinite;
+}
+
+.animate-spin-slow {
+  animation: spin 4s linear infinite;
 }
 
 @media (min-width: 640px) {
@@ -27914,6 +27962,18 @@ video {
     clear: none;
   }
 
+  .sm\:font-sans {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  }
+
+  .sm\:font-serif {
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  }
+
+  .sm\:font-mono {
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
   .sm\:font-header {
     font-family: Pacifico;
   }
@@ -28034,6 +28094,46 @@ video {
     font-weight: 900;
   }
 
+  .sm\:h-0 {
+    height: 0;
+  }
+
+  .sm\:h-1 {
+    height: 0.25rem;
+  }
+
+  .sm\:h-2 {
+    height: 0.5rem;
+  }
+
+  .sm\:h-3 {
+    height: 0.75rem;
+  }
+
+  .sm\:h-4 {
+    height: 1rem;
+  }
+
+  .sm\:h-5 {
+    height: 1.25rem;
+  }
+
+  .sm\:h-6 {
+    height: 1.5rem;
+  }
+
+  .sm\:h-8 {
+    height: 2rem;
+  }
+
+  .sm\:h-10 {
+    height: 2.5rem;
+  }
+
+  .sm\:h-12 {
+    height: 3rem;
+  }
+
   .sm\:h-16 {
     height: 4rem;
   }
@@ -28066,10 +28166,6 @@ video {
     height: 16rem;
   }
 
-  .sm\:h-card {
-    height: 40vh;
-  }
-
   .sm\:h-auto {
     height: auto;
   }
@@ -28084,6 +28180,10 @@ video {
 
   .sm\:h-screen {
     height: 100vh;
+  }
+
+  .sm\:h-card {
+    height: 40vh;
   }
 
   .sm\:text-xs {
@@ -29418,24 +29518,16 @@ video {
     min-height: 0;
   }
 
-  .sm\:min-h-card {
-    min-height: 40vh;
-  }
-
-  .sm\:min-h-1\/4 {
-    min-height: 25%;
-  }
-
-  .sm\:min-h-1\/2 {
-    min-height: 50%;
-  }
-
-  .sm\:min-h-3\/4 {
-    min-height: 75%;
-  }
-
   .sm\:min-h-full {
     min-height: 100%;
+  }
+
+  .sm\:min-h-screen {
+    min-height: 100vh;
+  }
+
+  .sm\:min-h-card {
+    min-height: 40vh;
   }
 
   .sm\:min-w-0 {
@@ -36251,6 +36343,10 @@ video {
 
   .sm\:animate-bounce {
     animation: bounce 1s infinite;
+  }
+
+  .sm\:animate-spin-slow {
+    animation: spin 4s linear infinite;
   }
 }
 
@@ -45738,6 +45834,18 @@ video {
     clear: none;
   }
 
+  .md\:font-sans {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  }
+
+  .md\:font-serif {
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  }
+
+  .md\:font-mono {
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
   .md\:font-header {
     font-family: Pacifico;
   }
@@ -45858,6 +45966,46 @@ video {
     font-weight: 900;
   }
 
+  .md\:h-0 {
+    height: 0;
+  }
+
+  .md\:h-1 {
+    height: 0.25rem;
+  }
+
+  .md\:h-2 {
+    height: 0.5rem;
+  }
+
+  .md\:h-3 {
+    height: 0.75rem;
+  }
+
+  .md\:h-4 {
+    height: 1rem;
+  }
+
+  .md\:h-5 {
+    height: 1.25rem;
+  }
+
+  .md\:h-6 {
+    height: 1.5rem;
+  }
+
+  .md\:h-8 {
+    height: 2rem;
+  }
+
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
+  .md\:h-12 {
+    height: 3rem;
+  }
+
   .md\:h-16 {
     height: 4rem;
   }
@@ -45890,10 +46038,6 @@ video {
     height: 16rem;
   }
 
-  .md\:h-card {
-    height: 40vh;
-  }
-
   .md\:h-auto {
     height: auto;
   }
@@ -45908,6 +46052,10 @@ video {
 
   .md\:h-screen {
     height: 100vh;
+  }
+
+  .md\:h-card {
+    height: 40vh;
   }
 
   .md\:text-xs {
@@ -47242,24 +47390,16 @@ video {
     min-height: 0;
   }
 
-  .md\:min-h-card {
-    min-height: 40vh;
-  }
-
-  .md\:min-h-1\/4 {
-    min-height: 25%;
-  }
-
-  .md\:min-h-1\/2 {
-    min-height: 50%;
-  }
-
-  .md\:min-h-3\/4 {
-    min-height: 75%;
-  }
-
   .md\:min-h-full {
     min-height: 100%;
+  }
+
+  .md\:min-h-screen {
+    min-height: 100vh;
+  }
+
+  .md\:min-h-card {
+    min-height: 40vh;
   }
 
   .md\:min-w-0 {
@@ -54075,6 +54215,10 @@ video {
 
   .md\:animate-bounce {
     animation: bounce 1s infinite;
+  }
+
+  .md\:animate-spin-slow {
+    animation: spin 4s linear infinite;
   }
 }
 
@@ -63562,6 +63706,18 @@ video {
     clear: none;
   }
 
+  .lg\:font-sans {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  }
+
+  .lg\:font-serif {
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  }
+
+  .lg\:font-mono {
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
   .lg\:font-header {
     font-family: Pacifico;
   }
@@ -63682,6 +63838,46 @@ video {
     font-weight: 900;
   }
 
+  .lg\:h-0 {
+    height: 0;
+  }
+
+  .lg\:h-1 {
+    height: 0.25rem;
+  }
+
+  .lg\:h-2 {
+    height: 0.5rem;
+  }
+
+  .lg\:h-3 {
+    height: 0.75rem;
+  }
+
+  .lg\:h-4 {
+    height: 1rem;
+  }
+
+  .lg\:h-5 {
+    height: 1.25rem;
+  }
+
+  .lg\:h-6 {
+    height: 1.5rem;
+  }
+
+  .lg\:h-8 {
+    height: 2rem;
+  }
+
+  .lg\:h-10 {
+    height: 2.5rem;
+  }
+
+  .lg\:h-12 {
+    height: 3rem;
+  }
+
   .lg\:h-16 {
     height: 4rem;
   }
@@ -63714,10 +63910,6 @@ video {
     height: 16rem;
   }
 
-  .lg\:h-card {
-    height: 40vh;
-  }
-
   .lg\:h-auto {
     height: auto;
   }
@@ -63732,6 +63924,10 @@ video {
 
   .lg\:h-screen {
     height: 100vh;
+  }
+
+  .lg\:h-card {
+    height: 40vh;
   }
 
   .lg\:text-xs {
@@ -65066,24 +65262,16 @@ video {
     min-height: 0;
   }
 
-  .lg\:min-h-card {
-    min-height: 40vh;
-  }
-
-  .lg\:min-h-1\/4 {
-    min-height: 25%;
-  }
-
-  .lg\:min-h-1\/2 {
-    min-height: 50%;
-  }
-
-  .lg\:min-h-3\/4 {
-    min-height: 75%;
-  }
-
   .lg\:min-h-full {
     min-height: 100%;
+  }
+
+  .lg\:min-h-screen {
+    min-height: 100vh;
+  }
+
+  .lg\:min-h-card {
+    min-height: 40vh;
   }
 
   .lg\:min-w-0 {
@@ -71899,6 +72087,10 @@ video {
 
   .lg\:animate-bounce {
     animation: bounce 1s infinite;
+  }
+
+  .lg\:animate-spin-slow {
+    animation: spin 4s linear infinite;
   }
 }
 
@@ -81386,6 +81578,18 @@ video {
     clear: none;
   }
 
+  .xl\:font-sans {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  }
+
+  .xl\:font-serif {
+    font-family: Georgia, Cambria, "Times New Roman", Times, serif;
+  }
+
+  .xl\:font-mono {
+    font-family: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  }
+
   .xl\:font-header {
     font-family: Pacifico;
   }
@@ -81506,6 +81710,46 @@ video {
     font-weight: 900;
   }
 
+  .xl\:h-0 {
+    height: 0;
+  }
+
+  .xl\:h-1 {
+    height: 0.25rem;
+  }
+
+  .xl\:h-2 {
+    height: 0.5rem;
+  }
+
+  .xl\:h-3 {
+    height: 0.75rem;
+  }
+
+  .xl\:h-4 {
+    height: 1rem;
+  }
+
+  .xl\:h-5 {
+    height: 1.25rem;
+  }
+
+  .xl\:h-6 {
+    height: 1.5rem;
+  }
+
+  .xl\:h-8 {
+    height: 2rem;
+  }
+
+  .xl\:h-10 {
+    height: 2.5rem;
+  }
+
+  .xl\:h-12 {
+    height: 3rem;
+  }
+
   .xl\:h-16 {
     height: 4rem;
   }
@@ -81538,10 +81782,6 @@ video {
     height: 16rem;
   }
 
-  .xl\:h-card {
-    height: 40vh;
-  }
-
   .xl\:h-auto {
     height: auto;
   }
@@ -81556,6 +81796,10 @@ video {
 
   .xl\:h-screen {
     height: 100vh;
+  }
+
+  .xl\:h-card {
+    height: 40vh;
   }
 
   .xl\:text-xs {
@@ -82890,24 +83134,16 @@ video {
     min-height: 0;
   }
 
-  .xl\:min-h-card {
-    min-height: 40vh;
-  }
-
-  .xl\:min-h-1\/4 {
-    min-height: 25%;
-  }
-
-  .xl\:min-h-1\/2 {
-    min-height: 50%;
-  }
-
-  .xl\:min-h-3\/4 {
-    min-height: 75%;
-  }
-
   .xl\:min-h-full {
     min-height: 100%;
+  }
+
+  .xl\:min-h-screen {
+    min-height: 100vh;
+  }
+
+  .xl\:min-h-card {
+    min-height: 40vh;
   }
 
   .xl\:min-w-0 {
@@ -89723,5 +89959,9 @@ video {
 
   .xl\:animate-bounce {
     animation: bounce 1s infinite;
+  }
+
+  .xl\:animate-spin-slow {
+    animation: spin 4s linear infinite;
   }
 }
